# ai-agent

./: .coverage  .env.example  .gitignore  LICENSE  README.md  build.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test_color_scheme.py  test_debug_api_persistence.py  test_debug_session_integration.py  test_debug_session_isolation.py  test_debug_session_persistence_fix.py  test_debug_state_persistence.py  test_frontend_integration.py  test_fullscreen.py  test_per_session_demo.py  test_session_endpoints.py  tsconfig.json
.github/: copilot-instructions.md
config/: mcp.template.json
demo/: 1-chat.py  3-chat-tool.py  3-chat-with-tools.py  4-chat-tool-exec.py  4-chat-with-tools-and-mcp.py  5-neo4j.py
docker/: docker-compose.yml  memgraph.sh  neo4j.sh
docs/: ai-roadmap.md  architecture.md  azure-deployment-guide.md  memgraph-troubleshooting.md  rag_architecture.md  rag_edge_relationships.md  remote-memgraph-connection.md  storage-system.md
examples/: 1-chat.py  10-azure-memgraph-test.py  2-tool.py  3-chat-with-tools.py  4-chat-with-tools-and-mcp.py  5-memgraph.py  5-neo4j.py  6-embeddings.py  7-loader.py  7-rag.py  8-test.py  8-url-loader.py  9-test.py  9-url-loader.py  run_example.sh  sample_rag_data.json
infra/: README.md
scripts/: doc-loader.py  doc_loader.py  enforce_memgraph_auth.py  force_restart_memgraph.sh  get_memgraph_connection.py  get_service_principal_objectid.sh  loader_config.py  memgraph.sh  setup_azure.sh  setup_feterated_identity.sh  setup_service_principle.sh  setup_service_principle_permissions.sh  test-api.sh  (+6 more)
(+297 files in other folders)
