[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent project by nullchimp"
authors = [
  { name = "nullchimp" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py39']
include = '\\.(py)$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ai_agent"]
known_third_party = [
    "pydantic", "pytest", "requests", "httpx", "starlette", "uvicorn"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__", ".git", ".mypy_cache", ".pytest_cache"]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
strict = true
exclude = [".venv", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.bandit]
target = "src"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
